--- a/layout/default/aboutus.html
+++ b/layout/default/aboutus.html
@@ -1,7 +1,7 @@
 <block include="meta_head.html">
 <block include="header.html">
 <block inbed="content">
-	<section class="covertron about" style="<print page=cover>"><print page="coverVideo"></section>
+	<section class="jumbotron" style="<print page=cover>"><print page="coverVideo"></section>
 	<section class="media">
 		<mediaitems>
 			<mediaimages>
