--- a/layout/default/footer.html
+++ b/layout/default/footer.html
@@ -1,6 +1,6 @@
 </main>
 <footer class="row border-top mt-5 px-2 py-4">
-	<aside class="col-12 col-sm-3 text-center">
+	<aside class="col-12 col-sm-3 mt-1 mt-sm-2 pt-4 text-center">
 		<img src="layout/default/images/logo.png" alt="<print config=business>"><br>
 		<small>&copy; <print year>. <print config="abn"></small>
 	</aside>
