--- a/layout/default/index.html
+++ b/layout/default/index.html
@@ -2,7 +2,7 @@
 <block include="header.html">
 <block include="featured.html">
 <block inbed="content">
-	<section class="covertron" style="<print page=cover>"><print page="coverVideo"></section>
+	<section class="jumbotron" style="<print page=cover>"><print page="coverVideo"></section>
 	<section class="row">
 		<article class="col-11 col-sm-8">
 			<print page="notes">
