--- a/layout/default/page.html
+++ b/layout/default/page.html
@@ -1,6 +1,7 @@
 <block include="meta_head.html">
 <block include="header.html">
 <block inbed="page">
+	<section class="jumbotron" style="<print page=cover>"><print page="coverVideo"></section>
 	<section class="row">
 		<article class="col-11">
 			<print content="notes">
