--- a/layout/default/aboutus.html
+++ b/layout/default/aboutus.html
@@ -11,7 +11,7 @@
 			</mediaimages>
 		</mediaitems>
 	</section>
-	<section class="row">
+	<section class="row mt-5">
 		<article class="col-11">
 			<print page="notes">
 		</article>
