--- a/layout/default/bookings.html
+++ b/layout/default/bookings.html
@@ -2,13 +2,13 @@
 <block include="header.html">
 <block inbed="bookings">
 	<pagenotes>
-		<section class="row">
+		<section class="row mt-5">
 			<article class="col-11">
 				<print page="notes">
 			</article>
 		</section>
 	</pagenotes>
-	<section class="row">
+	<section class="row mt-5">
 		<article id="booking" class="col-11 col-sm-6 m-0 p-0">
 			<form id="bookingform" class="card p-3" method="post" action="core/add_booking.php">
 				<input type="hidden" name="emailtrap" value="none">
