--- a/layout/default/cart.html
+++ b/layout/default/cart.html
@@ -2,13 +2,13 @@
 <block include="header.html">
 <block inbed="cart">
 	<pagenotes>
-    <section class="row">
+    <section class="row mt-5">
       <article class="col-11">
       	<print page="notes">
       </article>
   	</section>
   </pagenotes>
-	<section class="row">
+	<section class="row mt-5">
 		<emptycart>
 			<article id="cart" name="cart" class="col-11 col-sm-5 m-0 p-0 mx-1">
 				<div class="card">
