--- a/layout/default/error.html
+++ b/layout/default/error.html
@@ -1,7 +1,7 @@
 <block include="meta_head.html">
 <block inbed="error">
 	<main>
-		<section class="row">
+		<section class="row mt-5">
 			<article class="col-11">
 				<h1 class="text-center">This is not the page you're looking for.</h1>
 				<h2 class="text-center">Here's some things that might interest you.</h2>
