--- a/layout/default/gallery.html
+++ b/layout/default/gallery.html
@@ -2,13 +2,13 @@
 <block include="header.html">
 <block inbed="gallery">
   <pagenotes>
-    <section class="row">
+    <section class="row mt-5">
       <article class="col-11">
         <print page="notes">
       </article>
     </section>
   </pagenotes>
-  <section class="row col-12">
+  <section class="row col-12 mt-5">
     <article class="media my-2 text-center">
       <items>
 			  <a class="m-2" href="<print media=file>" data-fancybox="gallery" data-caption="<print media=fileALT>" class=""><img src="<print media=thumb>" class="img-thumbnail" alt="<print media=fileALT>"></a>
