--- a/layout/default/index.html
+++ b/layout/default/index.html
@@ -3,7 +3,7 @@
 <block include="featured.html">
 <block inbed="content">
 	<section class="jumbotron" style="<print page=cover>"><print page="coverVideo"></section>
-	<section class="row">
+	<section class="row mt-5">
 		<article class="col-11 col-sm-8">
 			<print page="notes">
 		</article>
@@ -26,8 +26,8 @@
 			</form>
 		</aside>
 	</section>
-	<section class="jumbotron">
-  	<header>
+	<section class="jumbotron mt-5">
+  	<header class="mt-5">
 			<h2>Fluid jumbotron</h2>
 		</header>
   	<p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
