--- a/layout/default/settings.html
+++ b/layout/default/settings.html
@@ -1,7 +1,7 @@
 <block include="meta_head.html">
 <block include="header.html">
 <block inbed="settings">
-	<section class="row">
+	<section class="row mt-5">
 		<article class="col-12 col-sm-11">
 			<iframe id="sp" name="sp" class="d-none"></iframe>
 			<form class="card mx-auto" target="sp" method="post" enctype="multipart/form-data" action="core/add_data.php">
