--- a/layout/default/sitemap.html
+++ b/layout/default/sitemap.html
@@ -1,7 +1,7 @@
 <block include="meta_head.html">
 <block include="header.html">
 <block inbed="sitemap">
-	<section class="row">
+	<section class="row mt-5">
 		<article class="col-11">
 			<items>
         <div class="mb-4">
