--- a/core/css/style.css
+++ b/core/css/style.css
@@ -887,12 +887,19 @@ details summary::-webkit-details-marker {
 .fc-event {
   color: #000 !important; }
 
+#events-layer {
+  z-index: 100;
+  position: absolute;
+  top: -1px;
+  right: -1px;
+}
+
 #events-layer .btn-xs {
   padding: 0;
-  width: 16px;
-  height: 16px;
-  font-size: 12px;
-  line-height: 13px; }
+  width: 19px;
+  height: 19px;
+  font-size: 13px;
+  line-height: 1.2em; }
 
 .eventEnd {
   background-color: #f28888; }
@@ -1590,6 +1597,40 @@ label.control-label.check {
 #attachments .card .card-img-top {
   min-height: 64px !important;
   max-height: 64px !important; }
+
+.starRating:not(old) {
+  display: block;
+  vertical-align: bottom;
+  width: 7.5em;
+  height: 1.5em;
+  overflow: hidden; }
+
+.starRating:not(old) > input {
+  opacity: 0;
+  margin-right: -100%; }
+
+.starRating:not(old) > label {
+  display: block;
+  position: relative;
+  float: right;
+  background: url(../images/star-off.svg);
+  background-size: contain; }
+
+.starRating:not(old) > label:before {
+  display: block;
+  opacity: 0;
+  transition: opacity .2s linear;
+  background: url(../images/star-on.svg);
+  background-size: contain;
+  width: 1.5em;
+  height: 1.5em;
+  content: ''; }
+
+.starRating:not(old) > label:hover:before,
+.starRating:not(old) > label:hover ~ label:before,
+.starRating:not(:hover) > :checked ~ label:before {
+  opacity: 1; }
+
 
 .rat {
   display: inline-block; }
