--- a/layout/default/css/stylesheet-helpers.css
+++ b/layout/default/css/stylesheet-helpers.css
@@ -603,27 +603,33 @@
   border-color: var(--warning-border-color) !important; }
 
 /* Shadow Classes */
+/* Shadow Classes */
 .shadow-0,
-.shadow-none {
-  box-shadow: none !important; }
+.shadow-none { box-shadow: none !important; }
 
 .shadow {
-  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important; }
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .75) !important; }
 
 .shadow-bottom {
-  box-shadow: 0 .5rem 1rem -.5rem rgba(0, 0, 0, .15) !important; }
+  box-shadow: 0 .5rem 1rem -0.5rem rgba(0, 0, 0, .75) !important; }
 
 .shadow-sm {
-  box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important; }
+  box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .75) !important; }
 
 .shadow-sm-bottom {
-  box-shadow: 0 .125rem .25rem -.12rem rgba(0, 0, 0, .075) !important; }
+  box-shadow: 0 .125rem .25rem -0.125rem rgba(0, 0, 0, .75) !important; }
+
+.shadow-md {
+  box-shadow: 0 .175rem 1.5rem rgba(0, 0, 0, .75) !important; }
+
+.shadow-md-bottom {
+  box-shadow: 0 .175rem 1.5rem -0.175rem rgba(0, 0, 0, .75) !important; }
 
 .shadow-lg {
-  box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175) !important; }
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, .75) !important; }
 
 .shadow-lg-bottom {
-  box-shadow: 0 1rem 3rem -1.5rem rgba(0, 0, 0, .175) !important; }
+  box-shadow: 0 1rem 3rem -1.5rem rgba(0, 0, 0, .75) !important; }
 
 /* Display Classes */
 .d-inherit {
