--- a/layout/default/css/stylesheet.css
+++ b/layout/default/css/stylesheet.css
@@ -99,7 +99,7 @@
   --secondary-link: #202326;
   --success-background-color: #d4edda;
   --success-border-color: #c3e6cb;
-  --success-color: #15572f;
+  --success-color: #155724;
   --success-link: #0b2e13;
   --warning-background-color: #fff3cd;
   --warning-border-color: #ffeeba;
