--- a/layout/default/header.html
+++ b/layout/default/header.html
@@ -21,11 +21,10 @@
 			<li role="menuitem"><a href="logout">Logout</a></li>
 			<li class="d-none d-sm-inline-block" role="menuitem"><img id="accountavatar" class="rounded-circle" src="<print user=avatar>" alt="<print user=name>"></li>
 		</ul>
-		<img id="accountavatar" class="rounded-circle d-inline-block d-sm-none" src="<print user=avatar>" alt="<print user=name>">
 	</nav>
 </accountmenu>
 <div class="sticky-top2 glass d-block d-sm-none text-center">
-	<a href="<print meta=url>"><img class="mx-auto my-4" src="layout/default/images/logo.png" alt="<print config=business>"></a>
+	<a href="<print meta=url>"><img class="mx-auto my-5 my-sm-4" src="layout/default/images/logo.png" alt="<print config=business>"></a>
 </div>
 <address class="row mx-0 px-2 pt-2 pt-sm-4 glass">
 	<aside class="col-12 col-sm-4 mt-3 mt-sm-2">
