--- a/layout/default/page.html
+++ b/layout/default/page.html
@@ -2,7 +2,7 @@
 <block include="header.html">
 <block inbed="page">
 	<section class="jumbotron" style="<print page=cover>"><print page="coverVideo"></section>
-	<section class="row">
+	<section class="row mt-5">
 		<article class="col-11">
 			<print content="notes">
 		</article>
