--- a/layout/default/search.html
+++ b/layout/default/search.html
@@ -1,7 +1,7 @@
 <block include="meta_head.html">
 <block include="header.html">
 <block inbed="content">
-	<section class="row">
+	<section class="row mt-5">
 		<article class="col-11">
 			<settings itemCount="50">
 			<items>
