More v0.1.0 Updates read CHANGELOG.md

--- a/layout/default/quickview.html
+++ b/layout/default/quickview.html
@@ -44,9 +44,11 @@
       <div class="quickview-choices row mt-2">
         <choices>
       </div>
-      <div class="text-right">
-        <button class="addCart mt-3" data-cartid="<print content=id>" data-cartchoice="0">Add to Cart</button>
-      </div>
+      <addToCart>
+        <div class="text-right">
+          <button class="addCart mt-3" data-cartid="<print content=id>" data-cartchoice="0">Add to Cart</button>
+        </div>
+      </addToCart>
     </div>
   </div>
   <footer class="col-12 p-2 pt-3">
