--- a/layout/default/side_menu.html
+++ b/layout/default/side_menu.html
@@ -61,7 +61,7 @@
 			</div>
 		</div>
 		<review>
-			<div id="review" class="card mb-3">
+			<div id="review" class="card mb-3 p-3">
 				<form id="reviewform" class="auroraForm" data-formtype="review" method="post" action="core/add_review.php">
 					<input type="hidden" name="id" value="<print content=id>">
 					<input type="hidden" name="emailtrap" value="none">
