--- a/layout/default/css/style.css
+++ b/layout/default/css/style.css
@@ -335,7 +335,7 @@ address [role="button"] {
   align-items: flex-end; }
 
 .chat .card-header {
-  background-color: #e9e9e9;
+  background-color: var(--card-border-color);
   width: 100%;
   height: 32px !important;
   cursor: pointer; }
@@ -358,7 +358,7 @@ address [role="button"] {
   height: 64px;
   border-radius: 50%;
   padding: 5px;
-  border: 5px solid #fff;
+  border: 5px solid var(--card-border-color);
   text-indent: 0;
   -webkit-box-shadow: .25rem .25rem .5rem rgba(0, 0, 0, .5);
      -moz-box-shadow: .25rem .25rem .5rem rgba(0, 0, 0, .5);
@@ -374,7 +374,7 @@ address [role="button"] {
 
 .chat.icon .card-header .close {
   top: 0;
-  background-color: #fff;
+  background-color: var(--card-border-color);
   width: 24px;
   height: 24px;
   border-radius: 50%;
@@ -387,8 +387,8 @@ address [role="button"] {
           box-shadow: .1rem .1rem .25rem rgba(0, 0, 0, .5); }
 
 .chat.icon .card-body {
-  border: 1px solid #e9e9e9;
-  background-color: #fff; }
+  border: var(--card-border-width) solid var(--card-border-color);
+  background-color: var(--card-background-color); }
 
 #chatScreen {
   position: relative;
