Further v0.1.0 Updates towards release package.

--- a/layout/default/content.html
+++ b/layout/default/content.html
@@ -146,7 +146,7 @@
 							<section>
 								<relitems>
 									<article class="card col-12 col-sm-5 m-2">
-										<a href="<print related-linktitle" class="card-image">
+										<a href="<print related=linktitle>" class="card-image">
 											<img <print thumb=srcset>src="<print related=thumb>" loading="lazy" alt="<print related=imageALT>">
 										</a>
 										<div class="card-footer d-inline-block text-center p-1 py-2">
