Continued updates for v0.1.0

--- a/layout/default/contactus.html
+++ b/layout/default/contactus.html
@@ -71,6 +71,11 @@
 					</div>
 				</div>
 			</phone>
+			<map>
+				<div class="col-12 col-md-11 mt-3">
+					<div class="row" id="map"></div>
+				</div>
+			</map>
 		</article>
 		<article class="col-11 col-sm-5 m-0 p-0">
 			<form id="contactform" class="auroraForm card p-3" data-formtype="contact" method="post" action="core/add_contactus.php">
