--- a/layout/default/content.html
+++ b/layout/default/content.html
@@ -94,6 +94,11 @@
 						</div>
 					</mediaitems>
 					<print content="notes">
+					<map>
+						<div class="col-12 mt-5">
+							<div class="row" id="map"></div>
+						</div>
+					</map>
 				</div>
 				<author>
 					<hr>
