--- a/layout/default/index.html
+++ b/layout/default/index.html
@@ -113,5 +113,12 @@
 		</div>
 	</section>
 </block>
+<block inbed="content2">
+	<map>
+		<div class="col-12 m-0">
+			<div class="row" id="map"></div>
+		</div>
+	</map>
+</block>
 <block include="footer.html">
 <block include="meta_footer.html">
